--- a/miata.vcxproj.filters
+++ b/miata.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="valve\player_pawn.hpp">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="utils\wrappers\message_box.hpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
